--- a/src/components/uploadBox/uploadBox.css
+++ b/src/components/uploadBox/uploadBox.css
@@ -1,12 +1,74 @@
-.container-drag {
-  border: 5px dashed cornflowerblue;
-  width: 300px;
-  height: 500px;
-  padding: 10px;
-  margin: 10px;
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transform: translateY(25%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* transform: translateY(25%); */
+  width: 500px;
+  height: 600px;
+  border: 2px outset grey;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 10px;
+}
+
+.container-drag {
+  width: 420px;
+  height: 275px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 2px dashed cornflowerblue;
+  background-color: #cdf0f7;
+  border-radius: 25px;
+}
+
+.container-drag img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  object-fit: cover;
+  border-radius: 5px;
+  border: 1px solid cornflowerblue;
+}
+
+.container-drag .svg {
+  height: 80px;
+  width: 80px;
+  border: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  object-fit: cover;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 24px;
+  padding: 10px;
+}
+
+.subtitle {
+  font-weight: 300;
+  font-size: 12px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.container-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  /* transform: translate(50%, 150px); */
+  font-size: 14px;
+  color: grey;
 }
