--- a/src/components/uploadBox/uploadBox.css
+++ b/src/components/uploadBox/uploadBox.css
@@ -7,7 +7,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* transform: translateY(25%); */
   width: 500px;
   height: 600px;
   border: 2px outset grey;
@@ -19,6 +18,7 @@
 .container-drag {
   width: 420px;
   height: 275px;
+  display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -27,26 +27,22 @@
   border-radius: 25px;
 }
 
+.container-drag .active {
+  border: 2px solid cornflowerblue;
+}
+
 .container-drag img {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   object-fit: cover;
-  border-radius: 5px;
-  border: 1px solid cornflowerblue;
+  border-radius: 25px;
+  /* border: 1px solid cornflowerblue; */
 }
 
-.container-drag .svg {
-  height: 80px;
-  width: 80px;
+.container-drag .blankimage {
+  height: 50px;
+  width: 50px;
   border: 0px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   object-fit: cover;
 }
 
@@ -67,8 +63,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  /* transform: translate(50%, 150px); */
   font-size: 14px;
   color: grey;
 }
