--- a/src/components/uploadBox/uploadBox.css
+++ b/src/components/uploadBox/uploadBox.css
@@ -27,14 +27,14 @@
   border-radius: 25px;
 }
 
-.container-drag .active {
+.active {
   border: 2px solid cornflowerblue;
 }
 
 .container-drag img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 25px;
   /* border: 1px solid cornflowerblue; */
 }
@@ -65,4 +65,24 @@
   align-items: center;
   font-size: 14px;
   color: grey;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#myFile {
+  display: none;
+}
+
+#get_file {
+  background: rgb(90, 146, 230);
+  border: 5px solid rgb(90, 146, 230);
+  padding: 15px;
+  border-radius: 20px;
+  margin: 10px;
+  cursor: pointer;
+  color: white;
 }
