--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: ##fafafb;
 }
 
-.App-link {
-  color: #61dafb;
+#upload-box {
+  width: 402px;
+  height: 469px;
+  background: #ffffff;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: -0.035em;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#upload-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#drag-box {
+  width: 338px;
+  height: 218.9px;
+  background: #f6f8fb;
+  border: 1px dashed #97bef4;
+  box-sizing: border-box;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#dragtext {
+  width: 166.01px;
+  height: 17.99px;
+  font-size: 12px;
+  line-height: 18px;
+  color: #bdbdbd;
+}
+
+#title {
+  width: 165px;
+  height: 26.99px;
+  left: 645.97px;
+  top: 340.37px;
+  font-size: 18px;
+  line-height: 27px;
+  color: #4f4f4f;
+}
+
+#subtitle {
+  width: 121px;
+  height: 14.99px;
+  left: 660.64px;
+  top: 383.35px;
+  font-size: 10px;
+  line-height: 15px;
+  color: #828282;
+}
+
+#or {
+  width: 14px;
+  height: 17.99px;
+  font-size: 12px;
+  line-height: 18px;
+  color: #bdbdbd;
+}
+
+input {
+  display: none;
+}
+
+.button {
+  width: 101px;
+  height: 31.98px;
+  background: #2f80ed;
+  border-radius: 8px;
+  color: #ffffff;
+  font-family: Noto Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  border: none;
+  cursor: pointer;
 }
